--- a/Portfolio.csproj
+++ b/Portfolio.csproj
@@ -7,7 +7,7 @@
 	  <BaseOutputPath>bin</BaseOutputPath>
 	  <InvariantGlobalization>true</InvariantGlobalization>
 	  <UserSecretsId>32e0356d-ee98-41b6-aec7-a542df43e681</UserSecretsId>
-	  <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	  <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
