--- a/Portfolio.csproj
+++ b/Portfolio.csproj
@@ -9,6 +9,9 @@
 	  <UserSecretsId>32e0356d-ee98-41b6-aec7-a542df43e681</UserSecretsId>
 	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	  <DockerfileContext>.</DockerfileContext>
+	  <RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
+	  <EnableSdkContainerDebugging>True</EnableSdkContainerDebugging>
+	  <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:9.0</ContainerBaseImage>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +28,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ContainerPort Include="8081" />
   </ItemGroup>
 
 </Project>
